<resources>
    <string name="app_name">ShaLoca</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Input Email</string>
    <string name="hint_password">Input Password</string>
    <string name="hint_passwordconfirm">Input confirm password </string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered in ShaLoca now!</string>
    <string name="mess_dialog_error_login">Error check your email and password</string>
    <string name="mess_dialog_sendEmailResetPass">You will receive an email change password from ShaLoca.
        Please confirm your email is correct.</string>
    <string name="btn_confirm_emailResetPass">Confirm</string>
    <string name="btn_chage_emailResetpass">Change</string>
    <string name="title_dialog_error_login">Error login</string>
    <string name="accountUnExist">Account does not exist . Please register new account !</string>
    <string name="trySendEmailVerified"> Click Try resend email</string>
    <string name="mess_dialog_error_accountUnverified"> Email is unverified ! </string>

    <string name="remember_login">Remember me</string>
    <string name="emaiorpassnull">Email or Pass is empty</string>
    <string name="inputUseName">Full Name</string>
    <string name="alreadyLogin">Already a member ? Login</string>
    <string name="register">Create Account</string>
    <string name="Valiusername">Your name more than 3 letter </string>
    <string name="valiEmail">Not format Email  </string>
    <string name="valiPass">Paasword more than 6 letter </string>
    <string name="valiPassconfirm">Not matche password </string>
    <string name="sendEmailVerifEmail">Send Email complete ! Please check mail to verified  </string>

    <string name="titleprocessBarRegister">Handling </string>
    <string name="messProcessBarRegister">Wait ...</string>
    <string name="title_activity_maps">Map</string>


</resources>
