<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_bg_green">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/size50"
            android:layout_height="@dimen/size50"
            android:layout_centerVertical="true"
            android:padding="@dimen/size15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Notification"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size_text_18"
            android:textStyle="bold" />


    </RelativeLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:id="@+id/notificationResetPass"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content" />
    <TextView

        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:text="@string/mess_dialog_sendEmailResetPass"
        android:textSize="15dp"

        android:layout_gravity="center"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/edt_emailResetPass"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:hint="Your Email"
        android:layout_margin="@dimen/size8"
        android:background="@drawable/bg_gray"
        android:padding="@dimen/size8"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_chage_emailResetpass"
            android:textAllCaps="false"
            android:background="@drawable/button_bg_green"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size18"
            android:layout_margin="@dimen/size8"
            android:id="@+id/btn_changeEmail"
            android:layout_height="match_parent" />
        <Button

            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_confirm_emailResetPass"
            android:background="@drawable/button_bg_green"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size18"
            android:layout_margin="@dimen/size8"
            android:textAllCaps="false"
            android:id="@+id/btn_confirmEmail"
            android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>